// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xstate-component-tree should rebuild on machine transition 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,11 +1,11 @@
  Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
-         "component": "one",
+         "component": "two",
          "props": false,
        },
      ],
      "id": "(machine)",
    },
`;

exports[`xstate-component-tree should return a tree of components 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "component": "two",
            "props": false,
          },
        ],
        "component": "one",
        "props": false,
      },
    ],
    "id": "(machine)",
  },
]
`;

exports[`xstate-component-tree should support arbitrary ids 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "component": "two",
            "props": false,
          },
        ],
        "component": "one",
        "props": false,
      },
    ],
    "id": "(machine)",
  },
]
`;

exports[`xstate-component-tree should support holes 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "component": "three",
            "props": false,
          },
        ],
        "component": "one",
        "props": false,
      },
    ],
    "id": "(machine)",
  },
]
`;

exports[`xstate-component-tree should support nested parallel states 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "two",
        "props": false,
      },
      Object {
        "children": Array [],
        "component": "three",
        "props": false,
      },
    ],
    "id": "(machine)",
  },
]
`;

exports[`xstate-component-tree should support parallel states 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "one",
        "props": false,
      },
      Object {
        "children": Array [],
        "component": "two",
        "props": false,
      },
    ],
    "id": "(machine)",
  },
]
`;

exports[`xstate-component-tree should support top-level machine ids in the built tree 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "one",
        "props": false,
      },
    ],
    "id": "testmachine",
  },
]
`;
